--- a/Admin/src/styles/pairingEmployee.css
+++ b/Admin/src/styles/pairingEmployee.css
@@ -1,4 +1,4 @@
-/* Container for the whole Add Employee page */
+Container for the whole Add Employee page
 .add-employee-container {
   padding: 20px;
   background-color: #f9f9f9;
@@ -196,3 +196,11 @@
     padding: 5px 10px;
   }
 }
+
+
+
+
+
+
+
+/* ################################################################################## */
